# sdypy_template_project

./: README.rst  pyproject.toml  requirements.dev.txt
docs/: requirements.txt
docs/source/: conf.py
sdypy_template_project/: __init__.py  core.py
